Add new resources to resources.html

--- a/resources.html
+++ b/resources.html
@@ -211,6 +211,22 @@
           <td><a href="https://www.vtsworld.org/branch/cary">https://www.vtsworld.org/branch/cary</a></td>
 
         </tr>
+
+        <tr>
+          <th scope="row">Cary Senior Center</th>
+          <td><a href="https://www.carync.gov/recreation-enjoyment/facilities/senior-center">https://www.carync.gov/recreation-enjoyment/facilities/senior-center</a></td>
+
+        </tr>
+        <tr>
+          <th scope="row">Friends of Cary Memorial Library</th>
+          <td><a href="https://www.carylibrary.org/become-friend-cary-library">https://www.carylibrary.org/become-friend-cary-library</a></td>
+
+        </tr>
+        <tr>
+          <th scope="row">Cary Downtown Farmers Market</th>
+          <td><a href="https://www.caryfarmersmarket.com/">https://www.caryfarmersmarket.com/</a></td>
+
+        </tr>
       </tbody>
     </table>
   </div>
