Update cover image file size constraint message

--- a/events.html
+++ b/events.html
@@ -153,7 +153,7 @@
                 <div class="mb-3 cover-file">
                   <label for="coverFile" class="form-label">Choose a cover image</label>
                   <input type="file" class="form-control file-input" id="coverFile">
-                  <div class="form-text">File constraints.</div>
+                  <div class="form-text">File size must be less than 50MB.</div>
                 </div>
                 <p class="figtree"><strong>Your event will be visible after it has been approved.</strong></p>
             </div>
