Rearrange navigation links in contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -37,18 +37,18 @@
               <a href="index.html" aria-current="page" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="events.html" aria-current="page" class="nav-link">Events</a>
-            </li>
-            <li class="nav-item">
-              <a href="about-us.html" aria-current="page" class="nav-link">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact-us.html" aria-current="page" class="nav-link active">Contact Us</a>
+              <a href="events.html" aria-current="page" class="nav-link active">Events</a>
             </li>
             <li class="nav-item">
               <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
+            <li class="nav-item">
+              <a href="about-us.html" aria-current="page" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact-us.html" aria-current="page" class="nav-link">Contact Us</a>
+            </li>
               <a href="references.html" aria-current="page" class="nav-link">References</a>
             </li>
           </ul>
