Rearrange navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="index.html" aria-current="page" class="nav-link active">Home</a>
+              <a href="index.html" aria-current="page" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="events.html" aria-current="page" class="nav-link">Events</a>
+              <a href="events.html" aria-current="page" class="nav-link active">Events</a>
+            </li>
+            <li class="nav-item">
+              <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
               <a href="about-us.html" aria-current="page" class="nav-link">About Us</a>
             </li>
             <li class="nav-item">
               <a href="contact-us.html" aria-current="page" class="nav-link">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
               <a href="references.html" aria-current="page" class="nav-link">References</a>
