--- a/references.html
+++ b/references.html
@@ -37,7 +37,10 @@
               <a href="index.html" aria-current="page" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="events.html" aria-current="page" class="nav-link">Events</a>
+              <a href="events.html" aria-current="page" class="nav-link active">Events</a>
+            </li>
+            <li class="nav-item">
+              <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
               <a href="about-us.html" aria-current="page" class="nav-link">About Us</a>
@@ -46,10 +49,7 @@
               <a href="contact-us.html" aria-current="page" class="nav-link">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
-            </li>
-            <li class="nav-item">
-              <a href="references.html" aria-current="page" class="nav-link active">References</a>
+              <a href="references.html" aria-current="page" class="nav-link">References</a>
             </li>
           </ul>
         </div>
