--- a/about-us.html
+++ b/about-us.html
@@ -37,13 +37,13 @@
               <a href="index.html" aria-current="page" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="events.html" aria-current="page" class="nav-link active">Events</a>
+              <a href="events.html" aria-current="page" class="nav-link">Events</a>
             </li>
             <li class="nav-item">
               <a href="resources.html" aria-current="page" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
-              <a href="about-us.html" aria-current="page" class="nav-link">About Us</a>
+              <a href="about-us.html" aria-current="page" class="nav-link active">About Us</a>
             </li>
             <li class="nav-item">
               <a href="contact-us.html" aria-current="page" class="nav-link">Contact Us</a>
