Change "Who We Are" paragraph in about-us.html
Added user interaction statistic to the WeCary description.

--- a/about-us.html
+++ b/about-us.html
@@ -68,10 +68,8 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
         <h3>Who We Are</h3>
-        <p>WeCary was founded in 2025 by a group of young enthusiastic students who wanted to make an accessible
-          platform to connect all members of the Town of Cary and surrounding areas. We believe that keeping all
-          residents engaged in some way or the other creates a healthy and active community. Our team ensures that
-          everyone has a fair chance and can get involved with no discrimination.
+        <p>WeCary was founded in 2025 as an accessible platform to connect all members of the Town of Cary and surrounding areas. We believe that keeping all residents engaged in some way or the other creates a healthy and active community. 
+          Our team ensures that everyone has a fair chance and can get involved with no discrimination. As of today, over 10,000 users have interacted with WeCary as a means of staying connected with the community. 
         </p>
       </li>
       <li class="list-group-item alternate">
