--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
 
-    <div class="home-image mx-auto w-100 h-20 p-3">
+    <div class="about-image mx-auto w-100 h-20 p-3">
       <h1 class="mx-3 mb-2">About Us</h1>
     </div>
 
